Set high z-index on sidebar to ensure it is the topmost element on the page. Refs #6014.

--- a/thecut/backslash/static/backslash/stylesheets/layout.css
+++ b/thecut/backslash/static/backslash/stylesheets/layout.css
@@ -15,6 +15,7 @@
   height: 100%;
   background-color: #171f26;
   overflow-y: scroll;
+  z-index: 9;
   -webkit-overflow-scrolling: touch;
 }
 
